# py_tccon_netcdf

./: .gitignore  README.md  copy_scripts.py  install_tccon_netcdf.sh  public_variables.txt  pyproject.toml  setup.py  site_info.txt  site_list.txt  update_site_info.py  write_netcdf.py  write_netdcf.py
lamont_averaging_kernels/: ak_20090622_ch4_averaged.out  ak_20090622_co_averaged.out  ak_20090622_h2o_averaged.out  ak_20090622_hdo_averaged.out  ak_20090622_hf_averaged.out  ak_20090622_n2o_averaged.out
util/: README.md  concat_netcdf.py  subset_tccon_netcdf.py  update_site_info.py
write_tccon_netcdf/: add_aks.py  add_priors.py  ak_tables.nc  bias_corrections.py  cf_standard_names.json  common_utils.py  concat_netcdf.py  concatenate_netcdf.py  constants.py  daily_error.py  file_format_updating.py  get_paths.py  make_ggg2020_1.py  manual_flags.json  missing_data.json  missing_data.txt  nc_ops.py  public_variables.json  public_variables.txt  release_flag_definitions.json  release_flags.json  site_info.json  site_info.txt  subset_tccon_netcdf.py  tccon_gases.json  update_manual_flags.py  update_site_info.py  write_netcdf.py
write_tccon_netcdf/lamont_averaging_kernels/: ak_20090622_co2_averaged.out
write_tccon_netcdf/prechecks/: definitions.py  ggg2020p1.py  interface.py  required_2020.1_variables.json
