[build-system]
requires = ["setuptools >= 75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "write_tccon_netcdf"
authors = [
	{ name = "Sebastien Roche", email = "sebastien.roche@mail.utoronto.ca" },
	{ name = "Joshua Laughner", email = "josh.laughner@jpl.nasa.gov" }
]
maintainers = [
	{ name = "Joshua Laughner", email = "josh.laughner@jpl.nasa.gov" }
]
description = "Write official TCCON netCDF output file"
readme = "README.md"
license = "MIT"
classifiers=[
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.10",
]
dependencies = [
    "ginput>=1.4.4,<2.0.0",
	"netcdf4>=1.5.0,<2.0.0",
	"numpy>=1.16.0,<2.0.0",
	"pandas>=0.23.0",
	"requests>=2.28.0",
	"scipy>=1.5.2",
	"tomli",
	"xarray>=0.13.0"
]
requires-python = ">= 3.10"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/TCCON/py_tccon_netcdf"

[project.scripts]
write_netcdf = "write_tccon_netcdf.write_netcdf:main"
concat_netcdf = "write_tccon_netcdf.concat_netcdf:main"
compare_netcdf = "write_tccon_netcdf.write_netcdf:compare_nc_files_command_line"
check_netcdf = "write_tccon_netcdf.prechecks.ggg2020p1:main"
update_site_info = "write_tccon_netcdf.update_site_info:main"
subset_netcdf = "write_tccon_netcdf.subset_tccon_netcdf:main"
update_manual_flags = "write_tccon_netcdf.update_manual_flags:main"
update_file_format = "write_tccon_netcdf.file_format_updating:main"

[tool.setuptools]
packages = ["write_tccon_netcdf"]

[tool.setuptools.package-data]
write_tccon_netcdf = ["write_netcdf/*.json", "write_netcdf/*.nc"]

[tool.setuptools.dynamic]
version = { attr = "write_tccon_netcdf.__version__" }
